Update Portifólio em Live

--- a/index.html
+++ b/index.html
@@ -4,23 +4,206 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/default.css" />
-    <title>Alexandre Almeida</title>
+
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" /> -->
+    <!-- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
+    e
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/pattern.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+
+    <title>be.academy | My Portfolio</title>
   </head>
   <body>
     <header>
-      <nav>
-        <h2>be.</h2>
-        <ul>
-          <li>Quem sou</li>
-          <li>Cases</li>
-          <li>Peça um orçamento</li>
-          <li><!-- linkedin--></li>
-          <li><!-- instagram--></li>
-        </ul>
-      </nav>
+      <div class="container">
+        <div class="logo">
+          <img src="./assets/img/be-logo.svg" alt="Logo be.academy" />
+          <h2>be.</h2>
+        </div>
+
+        <nav>
+          <ul class="menu">
+            <li><a href="#about" class="menu-item">QUEM SOU</a></li>
+            <li><a href="#cases" class="menu-item">CASES</a></li>
+          </ul>
+          <a href="#contact" class="btn-primary"
+            ><span>😃 PEÇA UM ORÇAMENTO</span></a
+          >
+          <ul class="menu-social">
+            <li>
+              <a href="#" target="_blank">
+                <img src="./assets/img/icon-linkedin.svg" alt="Meu Linkedin"
+              /></a>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <img
+                  src="./assets/img/icon-instagram.svg"
+                  alt="Meu Instagram"
+                />
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      <section class="s-hero">
+        <div class="container">
+          <div class="title-box">
+            <h1>
+              Hi!👋🏻 I'm <br />
+              <span>W. Alexandre Almeida</span>
+            </h1>
+            <h2>Estudante em Desenvolvimento Front-End</h2>
+            <p>
+              Tenho o compromisso e foco de cada vez mais aumentar meu
+              conhecimentos e assim ter sucesso na área de desenvolvimeto.
+            </p>
+
+            <div class="techs">
+              <a href="">
+                <img src="./assets/img/html.svg" alt="Techs - HTML" />
+              </a>
+              <a href="">
+                <img src="./assets/img/css.svg" alt="Techs - CSS" />
+              </a>
+              <a href="">
+                <img
+                  src="./assets/img/javascript.svg"
+                  alt="Techs - Javascript"
+                />
+              </a>
+            </div>
+
+            <a href="#cases" class="btn-primary empty"> Veja meus cases</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="s-success">
+        <div class="container">
+          <div class="title-success">
+            <span class="tag">#veemcompai🔥</span>
+            <h2><span class="bold">Sucesso</span><br />Tem<br />Nome</h2>
+          </div>
+
+          <div class="cards">
+            <div class="card active">
+              <div class="card-title">
+                <h3>+30</h3>
+              </div>
+              <div class="card-info">
+                <p>
+                  Clientes <br />
+                  <strong>Atendidos</strong>
+                </p>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-title">
+                <h3>+150</h3>
+              </div>
+              <div class="card-info">
+                <p>
+                  Páginas <br />
+                  <strong>Desenvolvidas</strong>
+                </p>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-title">
+                <h3>100%</h3>
+              </div>
+              <div class="card-info">
+                <p>
+                  De entregas <br />
+                  <strong>no prazo</strong>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Section About -->
+      <section class="s-about">
+        <div class="container">
+          <div class="about-me">
+            <h2>QUEM SOU <span>.</span></h2>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita
+              nihil aperiam ipsam labore vel velit vero numquam laudantium
+              molestiae unde commodi id, sit minus porro animi dolore
+              repudiandae. Iure, nostrum?
+            </p>
+            <ul>
+              <li>
+                <a
+                  href="https://www.linkedin.com/in/alexandrea11/"
+                  target="_blank"
+                  ><img
+                    src="./assets/img/icon-linkedin.svg"
+                    alt="Endereço do meu Linkedin"
+                /></a>
+              </li>
+              <li>
+                <a
+                  href="https://www.instagram.com/alexandre_a607/"
+                  target="_blank"
+                  ><img
+                    src="./assets/img/icon-instagram.svg"
+                    alt="Endereço do meu Instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="https://github.com/Alexandre-A11" target="_blank"
+                  ><img
+                    src="./assets/img/icon-github.svg"
+                    alt="Endereço do meu GitHub"
+                /></a>
+              </li>
+            </ul>
+          </div>
+          <div class="my-picture">
+            <img src="./assets/img/picture.jpg" alt="Minha foto de Perfil" />
+          </div>
+        </div>
+      </section>
+      <!-- Section Cases -->
+      <section class="s-cases">
+        <div class="container">
+          <div class="title-cases">
+            <h2>CASES<span>.</span></h2>
+          </div>
+
+          <div class="cases">
+            <div class="case">
+              <img src="./assets/img/case1.jpg" alt="Case de Sucesso 1" />
+            </div>
+            <div class="case">
+              <img src="./assets/img/case2.jpg" alt="Case de Sucesso 2" />
+            </div>
+            <div class="case">
+              <img src="./assets/img/case3.jpg" alt="Case de Sucesso 3" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Section Form (Contact) -->
+    </main>
+
+    <footer>
+      <div class="container">
+        <div class="copy">
+          <p>Feito com ❤️ e carinho por mim 😎</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
