--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/3b8fd284b2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -17,6 +21,43 @@
           <li>Sobre</li>
         </ul>
       </nav>
+
+      <section class="intro">
+        <div class="name">
+          <h1>
+            Weverton <br /><span> Alexandre</span> <br /><span
+              >Almeida<span class="dot">.</span></span
+            >
+          </h1>
+          <h2>&mdash;</h2>
+        </div>
+
+        <div class="about">
+          <h5>&mdash; Introdução</h5>
+          <h2>Estudante de programação, Fullstack<span class="dot">.</span></h2>
+          <p>
+            Tenho o compromisso e foco de cada vez mais aumentar meu
+            conhecimentos e assim ter sucesso na área de desenvolvimento<span
+              class="dot"
+              >.</span
+            >
+          </p>
+        </div>
+      </section>
+
+      <section class="about-plus">
+        <div class="social-media">
+          <ul>
+            <li><i class="fa-brands fa-linkedin-in"></i></li>
+            <li><i class="fa-brands fa-github"></i></li>
+            <li><i class="fa-brands fa-dribbble"></i></li>
+          </ul>
+        </div>
+
+        <div class="about-me-plus">
+          <h2><span>Mais sobre mim</span>&nbsp;<span>&#10146;</span></h2>
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
