adiciona sections s-success e s-resume

--- a/index.html
+++ b/index.html
@@ -13,53 +13,149 @@
     ></script>
   </head>
   <body>
+    <!-- Header -->
     <header>
-      <nav>
+      <nav class="container">
         <ul class="menu">
           <li>Projetos</li>
           <li>Contato</li>
           <li>Sobre</li>
         </ul>
       </nav>
-
-      <section class="intro">
-        <div class="name">
-          <h1>
-            Weverton <br /><span> Alexandre</span> <br /><span
-              >Almeida<span class="dot">.</span></span
-            >
-          </h1>
-          <h2>&mdash;</h2>
-        </div>
-
-        <div class="about">
-          <h5>&mdash; Introdução</h5>
-          <h2>Estudante de programação, Fullstack<span class="dot">.</span></h2>
-          <p>
-            Tenho o compromisso e foco de cada vez mais aumentar meu
-            conhecimentos e assim ter sucesso na área de desenvolvimento<span
-              class="dot"
-              >.</span
-            >
-          </p>
-        </div>
-      </section>
-
-      <section class="about-plus">
-        <div class="social-media">
-          <ul>
-            <li><i class="fa-brands fa-linkedin-in"></i></li>
-            <li><i class="fa-brands fa-github"></i></li>
-            <li><i class="fa-brands fa-dribbble"></i></li>
-          </ul>
-        </div>
-
-        <div class="about-me-plus">
-          <h2><span>Mais sobre mim</span>&nbsp;<span>&#10146;</span></h2>
-        </div>
-      </section>
     </header>
-    <main></main>
+    <main>
+      <!-- Section Hero -->
+      <section class="s-hero container">
+        <div>
+          <div class="name">
+            <h1>
+              Weverton <br /><span> Alexandre</span> <br /><span
+                >Almeida<span class="dot">.</span></span
+              >
+            </h1>
+            <h2>&mdash;</h2>
+          </div>
+
+          <div class="about">
+            <h5 class="text-default">&mdash; Introdução</h5>
+            <h2 class="text-highlight">
+              Estudante de programação, Fullstack<span class="dot">.</span>
+            </h2>
+            <p class="text-default">
+              Tenho o compromisso e foco de cada vez mais aumentar meu
+              conhecimentos e assim ter sucesso na área de desenvolvimento<span
+                class="dot"
+                >.</span
+              >
+            </p>
+          </div>
+        </div>
+
+        <div class="about-plus">
+          <div class="social-media">
+            <ul>
+              <li><i class="fa-brands fa-linkedin-in"></i></li>
+              <li><i class="fa-brands fa-github"></i></li>
+              <li><i class="fa-brands fa-dribbble"></i></li>
+            </ul>
+          </div>
+
+          <div class="about-me-plus">
+            <h2 class="link">
+              <span>Mais sobre mim</span>&nbsp;<span>&#10146;</span>
+            </h2>
+          </div>
+        </div>
+      </section>
+
+      <!-- Section Success -->
+      <section class="s-success">
+        <div class="container">
+          <div class="contato-email">
+            <h5 class="text-default">&mdash; Contato</h5>
+            <h3 class="text-highlight">
+              Aberto para dúvidas & sugestões <span class="dot">.</span>
+            </h3>
+            <p class="text-default">Fale comigo 🙂</p>
+            <h2 class="link">
+              <span>hi@alexandre.com</span>&nbsp;<span>&#10146;</span>
+            </h2>
+          </div>
+
+          <div class="quote">
+            <h3 class="text-highlight">
+              Criatividade não se esgota, quanto mais você usa, mais você
+              tem<span class="dot">.</span>
+            </h3>
+            <p class="text-default">
+              Ninguém bate mais forte que a vida. Mas não se trata do quão forte
+              você bate. E sim o quanto você aguenta apanhar e continuar
+              seguindo em frente. O Quanto você consegue aguentar e continuar
+              seguindo em frente. É assim que vencedores são feitos<span
+                class="dot"
+                >.</span
+              >
+            </p>
+            <p class="text-default">
+              &mdash; Sylvester Stallone, Rocky Balboa<span class="dot">.</span>
+            </p>
+          </div>
+        </div>
+
+        <div class="container">
+          <h6 class="link"><span>Serviços</span></h6>
+          <h2 class="text-highlight">O que eu faço?</h2>
+          <div class="cards">
+            <div class="card">
+              <img
+                src="./assets/img/front-end.svg"
+                alt="Ícone tela de computador com código"
+              />
+              <h2 class="text-highlight">Front End</h2>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/img/back-end.svg"
+                alt="Ícone com servidores "
+              />
+              <h2 class="text-highlight">Back End</h2>
+            </div>
+            <div class="card">
+              <img
+                src="./assets/img/fullstack.svg"
+                alt="Ícone representando um Fullstack"
+              />
+              <h2 class="text-highlight">Fullstack</h2>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Section Resume -->
+      <section class="s-resume">
+        <div class="container">
+          <div class="tech-stack">
+            <ul>
+              <li><i class="fa-brands fa-html5"></i></li>
+              <li><i class="fa-brands fa-css3-alt"></i></li>
+              <li><i class="fa-brands fa-python"></i></li>
+              <li><i class="fa-brands fa-js"></i></li>
+              <li><i class="fa-brands fa-php"></i></li>
+              <li><i class="fa-brands fa-react"></i></li>
+              <li><i class="fa-brands fa-linux"></i></li>
+              <li><i class="fa-brands fa-git-alt"></i></li>
+              <li><i class="fa-brands fa-docker"></i></li>
+              <li><i class="fa-brands fa-github"></i></li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <!-- Section About -->
+      <section class="about-me">
+        <div class="container"></div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
