Terminado corpo da página

--- a/index.html
+++ b/index.html
@@ -233,7 +233,10 @@
       </section>
     </main>
     <footer>
-      
+      <div class="container">
+        <p class="text-default">Projeto Portfólio <span>be.academy</span> + <span>PayLivre</span></p>
+      </div>
+      <p class="text-default">&copy; 2022</p>
     </footer>
 
     <!-- Scripts -->
