muda efeito hover menu

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header>
       <nav class="container">
         <ul class="menu">
-          <li>Projetos</li>
-          <li>Contato</li>
-          <li>Sobre</li>
+          <li>Projetos <span class="dot-menu"></span></li>
+          <li>Contato <span class="dot-menu"></span></li>
+          <li>Sobre <span class="dot-menu"></span></li>
         </ul>
       </nav>
     </header>
