adiciona effeitos hover e-mail e 'mais sobre mim'

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
     <header>
       <nav class="container">
         <ul class="menu">
-          <li>Projetos <span class="dot-menu"></span></li>
-          <li>Contato <span class="dot-menu"></span></li>
-          <li>Sobre <span class="dot-menu"></span></li>
+          <li><a href="#services"> Serviços <span class="dot-menu"></span></a></li>
+          <li><a href="#tech-stack">Tech Stack <span class="dot-menu"></span></a></li>
+          <li><a href="#projects"> Projetos <span class="dot-menu"></span></a></li>
+          <li><a href="#contact">Contato <span class="dot-menu"></span></a></li>
         </ul>
       </nav>
     </header>
@@ -62,14 +63,15 @@
 
           <div class="about-me-plus">
             <h2 class="link">
-              <span>Mais sobre mim</span>&nbsp;<span>&#10146;</span>
+              <a href="#more-about-me"><span>Mais sobre mim</span></a>&nbsp;<span class="arrow"></span>
+              <!-- <a href="#more-about-me"><span>Mais sobre mim</span></a>&nbsp;<span>&#10146;</span> -->
             </h2>
           </div>
         </div>
       </section>
 
       <!-- Section Success -->
-      <section class="s-success">
+      <section class="s-success" id="services">
         <div class="container">
           <div class="contato-email">
             <h5 class="text-default">&mdash; Contato</h5>
@@ -78,7 +80,7 @@
             </h3>
             <p class="text-default">Fale comigo 🙂</p>
             <h2 class="link">
-              <span>hi@alexandre.com</span>&nbsp;<span>&#10146;</span>
+              <a href="mailto:alee.wxa@gmail.com"><span>hi@alexandre.com</span></a>&nbsp;<span class="arrow"></span>
             </h2>
           </div>
 
@@ -132,7 +134,7 @@
       </section>
 
       <!-- Section Resume -->
-      <section class="s-resume">
+      <section class="s-resume" id="tech-stack">
         <div class="container">
           <div class="tech-stack">
             <ul>
@@ -152,7 +154,7 @@
       </section>
 
       <!-- Section About -->
-      <section class="about-me">
+      <section class="about-me" id="more-about-me">
         <div class="container">
           <div class="photo">
             <!-- inserir imagem -->
@@ -171,9 +173,9 @@
       </section>
 
       <!-- Section s-projects -->
-      <section class="s-projects">
+      <section class="s-projects" id="projects">
         <div class="container">
-          <h2 class="text-highlight">Cases<span class="dot">.</span></h2>
+          <h2 class="text-highlight">Projetos<span class="dot">.</span></h2>
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
@@ -207,7 +209,7 @@
       </section>
 
       <!-- Section s-contact -->
-      <section class="s-contact">
+      <section class="s-contact" id="contact">
         <div class="container">
           <h2 class="text-highlight">Entre<br><span>em</span><br><span>Contato</span><span class="dot">.</span></h2>
           <div class="contact-form">
