adiciona links e efeitos ao github, dribbble, linkedin

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <div class="about-plus">
           <div class="social-media">
             <ul>
-              <li><i class="fa-brands fa-linkedin-in"></i></li>
-              <li><i class="fa-brands fa-github"></i></li>
-              <li><i class="fa-brands fa-dribbble"></i></li>
+              <li><a target="_blank" href="https://dribbble.com/Alexandre_A11"><i class="fa-brands fa-dribbble"></i></a></li>
+              <li><a target="_blank" href="https://github.com/Alexandre-A11"><i class="fa-brands fa-github"></i></a></li>
+              <li><a target="_blank" href="https://www.linkedin.com/in/alexandrea11/"><i class="fa-brands fa-linkedin-in"></i></a></li>
             </ul>
           </div>
 
