adicionado imagem de perfil, adicionado ScrollRevel

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <section class="about-me" id="more-about-me">
         <div class="container">
           <div class="photo">
-            <!-- inserir imagem -->
+            <img src="./assets/img/profile-pic.png" alt="Foto de perfil">
           </div>
           <div class="who-i-am text-default">
             <h2 class="text-highlight">Quem sou<span class="dot">.</span></h2>
@@ -176,28 +176,35 @@
           <div class="swiper mySwiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="./assets/img/bikcraft.png" alt="Site de Bicicletas" />
+                <a target="_blank" href="https://alexandre-a11.github.io/projects/Bikcraft-Site/index.html">
+                <img src="./assets/img/bikcraft.png" alt="Site de Bicicletas" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="./assets/img/edge.png" alt="Site de negócios" />
+                <a href="https://alexandre-a11.github.io/projects/Edge_Ledger/index.html" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/img/edge.png" alt="Site de negócios" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="./assets/img/hotel.png" alt="Site Hotel" />
+                <a href="https://alexandre-a11.github.io/projects/hotel_website/index.html" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/img/hotel.png" alt="Site Hotel" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="./assets/img/newsgrid.png" alt="Site de Notícias" />
+                <a href="https://alexandre-a11.github.io/projects/NewsGrid/index.html" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/img/newsgrid.png" alt="Site de Notícias" /></a>
               </div>
               <div class="swiper-slide">
-                <img src="./assets/img/pig-game.png" alt="Site Pig Game" />
+                <a href="https://alexandre-a11.github.io/projects/pig-game/index.html" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/img/pig-game.png" alt="Site Pig Game" /></a>
               </div>
               <div class="swiper-slide">
+                <a href="https://alexandre-a11.github.io/dio-desafio/" target="_blank" rel="noopener noreferrer">
                 <img
                   src="./assets/img/projetos-DIO.png"
                   alt="Projetos da DIO"
-                />
+                /></a>
               </div>
               <div class="swiper-slide">
-                <img src="./assets/img/To-Do-List.png" alt="To-do List" />
+                <a href="https://alexandre-a11.github.io/dio-desafio/Mod-III-JavaScript/Intro-JavaScript/To-Do-List/index.html" target="_blank" rel="noopener noreferrer">
+                <img src="./assets/img/To-Do-List.png" alt="To-do List" /></a>
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -240,6 +247,7 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
