adiciona responsividade parcialmente

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--prettier-ignore-->
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
-    <link rel="stylesheet" href="./assets/css/testes.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
   </head>
   <body>
     <!-- Header -->
